[build-system]
requires = ["setuptools>=61.0", "setuptools-scm>=8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "esokeyring"
readme = "README.md"
description = "Expose keyring secrets through an API for Kubernetes External Secrets Operator."
requires-python = ">=3.10"
keywords = ["kubernetes", "k8s", "eso", "secrets"]
classifiers = [
    "Programming Language :: Python"
]
dynamic = ["version"]
dependencies = [
    "fastapi~=0.110",
    "keyring~=25.0",
    "prometheus-fastapi-instrumentator~=7.0",
    "pydantic-settings~=2.2",
]

[project.optional-dependencies]
test = [
    "httpx~=0.27",
    "pytest~=8.1",
    "tox>=4",
]
uvicorn = [
    "uvicorn~=0.29",
]

[tool.setuptools_scm]
version_file = "src/esokeyring/_version.py"

[tool.ruff]
line-length = 88
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["F", "E", "W", "C90", "I", "N", "D"]
ignore = ["D203", "D212"]

[tool.ruff.lint.pydocstyle]
convention = "numpy"

[tool.mypy]
plugins = ["pydantic.mypy"]
